custom scrollbar fix bug

--- a/src/components/Chat/Chat.module.scss
+++ b/src/components/Chat/Chat.module.scss
@@ -5,6 +5,29 @@
   width: 100%;
   background: url("../../img/bg.jpg") no-repeat center center fixed;
   min-height: 100vh;
+  ::-webkit-scrollbar {
+    width: 14px;
+    height: 14px;
+  }
+
+  ::-webkit-scrollbar-thumb {
+    height: 6px;
+    border: 4px solid rgba(0, 0, 0, 0);
+    background-clip: padding-box;
+    -webkit-border-radius: 7px;
+    background-color: rgba(0, 0, 0, .5);
+    -webkit-box-shadow: inset -1px -1px 0px rgba(0, 0, 0, 0.05), inset 1px 1px 0px rgba(0, 0, 0, 0.05);
+  }
+
+  ::-webkit-scrollbar-button {
+    width: 0;
+    height: 0;
+    display: none;
+  }
+
+  ::-webkit-scrollbar-corner {
+    background-color: transparent;
+  }
 }
 .chat__container {
   width: 80%;
@@ -66,6 +89,7 @@
       }
     }
   }
+
 }
 .chat__messages {
   padding: 30px;
@@ -107,12 +131,12 @@
     font-size: 18px;
     padding: 5px;
     height: 40px;
-    flex: 1;
     border: none;
+    flex: 1;
     background: #17212B;
     color: #fefefe;
     &:focus {
-      border: none;
+      outline: none;
     }
   }
   .btn {
